# random-imgur-wall

./: Cargo.toml  README.md
.github/workflows/: rust.yml
server/: Cargo.toml
server/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
web/static/: config.json  index.html
