[package]
name = "server"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = { git = "https://github.com/leo-lb/ws-rs", branch = "stable" }
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
