[package]
name = "web"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/leo-lb/yew.git", branch = "more_fetch_options" }
serde = "1.0.99"
serde_derive = "1.0.99"
failure = "0.1.5"
rand = { version = "0.7.0", features = [ "stdweb" ] }
http = "0.1.18"